adding new branch update

--- a/news.html
+++ b/news.html
@@ -9,5 +9,6 @@
     This is news page
     <h1>This is new feature</h1>
     <h1>This is new feature2</h1>
+    <h2>This is new branch update3</h2>
 </body>
 </html>
