--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
    This is about page 
    <h1>This is new feature</h1>
    <h1>This is new feature2</h1>
-   
+   <h2>This is new branch update3</h2>
 </body>
 </html>
